los focos funcionan correctamente solo sobre la pantalla visible, ajuste detalles de responsive

--- a/style.css
+++ b/style.css
@@ -62,7 +62,9 @@ p {
   display: flex;
   padding: 40px;
   margin: 60px;
+  align-items: center;
 }
+
 #modo-diurno,
 #modo-nocturno {
   background-color: transparent;
@@ -126,7 +128,7 @@ p {
   transition: 1.5s;
   z-index: 2;
   display: flex;
-  overflow: scroll;
+  overflow: auto;
 
   flex-direction: column;
 }
@@ -294,7 +296,7 @@ p {
   background-color: white;
   max-height: 100%;
   min-width: 800px;
-  overflow-y: scroll;
+  overflow-y: auto;
   padding: 20px;
   position: fixed;
   right: 25%;
@@ -666,6 +668,7 @@ p {
   display: flex;
   justify-content: center;
   padding: 40px 10px 30px;
+  align-items: center;
   margin-top: 80px;
 }
 
